--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@rails/webpacker": "^4.3.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
+    "jquery": "^3.6.0",
     "sass": "^1.49.9",
     "turbolinks": "^5.2.0",
     "webpack": "^4.3.0"
